AllGrammar/csharpGrammar/myPreprocessorParser.cpp

// Generated from myPreprocessorParser.g4 by ANTLR 4.11.1


#include "myPreprocessorParserListener.h"
#include "myPreprocessorParserBase.h"
#include "myPreprocessorParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MyPreprocessorParserStaticData final {
  MyPreprocessorParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MyPreprocessorParserStaticData(const MyPreprocessorParserStaticData&) = delete;
  MyPreprocessorParserStaticData(MyPreprocessorParserStaticData&&) = delete;
  MyPreprocessorParserStaticData& operator=(const MyPreprocessorParserStaticData&) = delete;
  MyPreprocessorParserStaticData& operator=(MyPreprocessorParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mypreprocessorparserParserOnceFlag;
MyPreprocessorParserStaticData *mypreprocessorparserParserStaticData = nullptr;

void mypreprocessorparserParserInitialize() {
  assert(mypreprocessorparserParserStaticData == nullptr);
  auto staticData = std::make_unique<MyPreprocessorParserStaticData>(
    std::vector<std::string>{
      "preprocessor_directive", "directive_new_line_or_sharp", "preprocessor_expression"
    },
    std::vector<std::string>{
      "", "'\\u00EF\\u00BB\\u00BF'", "", "'/***/'", "", "", "", "", "'#'", 
      "'abstract'", "'add'", "'alias'", "'__arglist'", "'as'", "'ascending'", 
      "'async'", "'await'", "'base'", "'bool'", "'break'", "'by'", "'byte'", 
      "'case'", "'catch'", "'char'", "'checked'", "'class'", "'const'", 
      "'continue'", "'decimal'", "'default'", "'delegate'", "'descending'", 
      "'do'", "'double'", "'dynamic'", "'else'", "'enum'", "'equals'", "'event'", 
      "'explicit'", "'extern'", "'false'", "'finally'", "'fixed'", "'float'", 
      "'for'", "'foreach'", "'from'", "'get'", "'goto'", "'group'", "'if'", 
      "'implicit'", "'in'", "'int'", "'interface'", "'internal'", "'into'", 
      "'is'", "'join'", "'let'", "'lock'", "'long'", "'nameof'", "'namespace'", 
      "'new'", "'null'", "'object'", "'on'", "'operator'", "'orderby'", 
      "'out'", "'override'", "'params'", "'partial'", "'private'", "'protected'", 
      "'public'", "'readonly'", "'ref'", "'remove'", "'return'", "'sbyte'", 
      "'sealed'", "'select'", "'set'", "'short'", "'sizeof'", "'stackalloc'", 
      "'static'", "'string'", "'struct'", "'switch'", "'this'", "'throw'", 
      "'true'", "'try'", "'typeof'", "'uint'", "'ulong'", "'unchecked'", 
      "'unmanaged'", "'unsafe'", "'ushort'", "'using'", "'var'", "'virtual'", 
      "'void'", "'volatile'", "'when'", "'where'", "'while'", "'yield'", 
      "", "", "", "", "", "", "", "", "", "", "", "'{'", "'}'", "'['", "']'", 
      "'('", "')'", "'.'", "','", "':'", "';'", "'+'", "'-'", "'*'", "'/'", 
      "'%'", "'&'", "'|'", "'^'", "'!'", "'~'", "'='", "'<'", "'>'", "'\\u003F'", 
      "'::'", "'\\u003F\\u003F'", "'++'", "'--'", "'&&'", "'||'", "'->'", 
      "'=='", "'!='", "'<='", "'>='", "'+='", "'-='", "'*='", "'/='", "'%='", 
      "'&='", "'|='", "'^='", "'<<'", "'<<='", "'\\u003F\\u003F='", "'..'", 
      "'{{'", "", "", "", "", "", "", "", "", "", "", "'define'", "'undef'", 
      "'elif'", "'endif'", "'line'", "", "", "", "", "", "", "'hidden'", 
      "", "", "", "'}}'"
    },
    std::vector<std::string>{
      "", "BYTE_ORDER_MARK", "SINGLE_LINE_DOC_COMMENT", "EMPTY_DELIMITED_DOC_COMMENT", 
      "DELIMITED_DOC_COMMENT", "SINGLE_LINE_COMMENT", "DELIMITED_COMMENT", 
      "WHITESPACES", "SHARP", "ABSTRACT", "ADD", "ALIAS", "ARGLIST", "AS", 
      "ASCENDING", "ASYNC", "AWAIT", "BASE", "BOOL", "BREAK", "BY", "BYTE", 
      "CASE", "CATCH", "CHAR", "CHECKED", "CLASS", "CONST", "CONTINUE", 
      "DECIMAL", "DEFAULT", "DELEGATE", "DESCENDING", "DO", "DOUBLE", "DYNAMIC", 
      "ELSE", "ENUM", "EQUALS", "EVENT", "EXPLICIT", "EXTERN", "FALSE", 
      "FINALLY", "FIXED", "FLOAT", "FOR", "FOREACH", "FROM", "GET", "GOTO", 
      "GROUP", "IF", "IMPLICIT", "IN", "INT", "INTERFACE", "INTERNAL", "INTO", 
      "IS", "JOIN", "LET", "LOCK", "LONG", "NAMEOF", "NAMESPACE", "NEW", 
      "NULL_", "OBJECT", "ON", "OPERATOR", "ORDERBY", "OUT", "OVERRIDE", 
      "PARAMS", "PARTIAL", "PRIVATE", "PROTECTED", "PUBLIC", "READONLY", 
      "REF", "REMOVE", "RETURN", "SBYTE", "SEALED", "SELECT", "SET", "SHORT", 
      "SIZEOF", "STACKALLOC", "STATIC", "STRING", "STRUCT", "SWITCH", "THIS", 
      "THROW", "TRUE", "TRY", "TYPEOF", "UINT", "ULONG", "UNCHECKED", "UNMANAGED", 
      "UNSAFE", "USHORT", "USING", "VAR", "VIRTUAL", "VOID", "VOLATILE", 
      "WHEN", "WHERE", "WHILE", "YIELD", "IDENTIFIER", "LITERAL_ACCESS", 
      "INTEGER_LITERAL", "HEX_INTEGER_LITERAL", "BIN_INTEGER_LITERAL", "REAL_LITERAL", 
      "CHARACTER_LITERAL", "REGULAR_STRING", "VERBATIUM_STRING", "INTERPOLATED_REGULAR_STRING_START", 
      "INTERPOLATED_VERBATIUM_STRING_START", "OPEN_BRACE", "CLOSE_BRACE", 
      "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_PARENS", "CLOSE_PARENS", "DOT", 
      "COMMA", "COLON", "SEMICOLON", "PLUS", "MINUS", "STAR", "DIV", "PERCENT", 
      "AMP", "BITWISE_OR", "CARET", "BANG", "TILDE", "ASSIGNMENT", "LT", 
      "GT", "INTERR", "DOUBLE_COLON", "OP_COALESCING", "OP_INC", "OP_DEC", 
      "OP_AND", "OP_OR", "OP_PTR", "OP_EQ", "OP_NE", "OP_LE", "OP_GE", "OP_ADD_ASSIGNMENT", 
      "OP_SUB_ASSIGNMENT", "OP_MULT_ASSIGNMENT", "OP_DIV_ASSIGNMENT", "OP_MOD_ASSIGNMENT", 
      "OP_AND_ASSIGNMENT", "OP_OR_ASSIGNMENT", "OP_XOR_ASSIGNMENT", "OP_LEFT_SHIFT", 
      "OP_LEFT_SHIFT_ASSIGNMENT", "OP_COALESCING_ASSIGNMENT", "OP_RANGE", 
      "DOUBLE_CURLY_INSIDE", "OPEN_BRACE_INSIDE", "REGULAR_CHAR_INSIDE", 
      "VERBATIUM_DOUBLE_QUOTE_INSIDE", "DOUBLE_QUOTE_INSIDE", "REGULAR_STRING_INSIDE", 
      "VERBATIUM_INSIDE_STRING", "CLOSE_BRACE_INSIDE", "FORMAT_STRING", 
      "DIRECTIVE_WHITESPACES", "DIGITS", "DEFINE", "UNDEF", "ELIF", "ENDIF", 
      "LINE", "ERROR", "WARNING", "REGION", "ENDREGION", "PRAGMA", "NULLABLE", 
      "DIRECTIVE_HIDDEN", "CONDITIONAL_SYMBOL", "DIRECTIVE_NEW_LINE", "TEXT", 
      "DOUBLE_CURLY_CLOSE_INSIDE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mypreprocessorparserParserStaticData = staticData.release();
}

}

myPreprocessorParser::myPreprocessorParser(TokenStream *input) : myPreprocessorParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

myPreprocessorParser::myPreprocessorParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : myPreprocessorParserBase(input) {
  myPreprocessorParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mypreprocessorparserParserStaticData->atn, mypreprocessorparserParserStaticData->decisionToDFA, mypreprocessorparserParserStaticData->sharedContextCache, options);
}

myPreprocessorParser::~myPreprocessorParser() {
  delete _interpreter;
}

const atn::ATN& myPreprocessorParser::getATN() const {
  return *mypreprocessorparserParserStaticData->atn;
}

std::string myPreprocessorParser::getGrammarFileName() const {
  return "myPreprocessorParser.g4";
}

const std::vector<std::string>& myPreprocessorParser::getRuleNames() const {
  return mypreprocessorparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& myPreprocessorParser::getVocabulary() const {
  return mypreprocessorparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView myPreprocessorParser::getSerializedATN() const {
  return mypreprocessorparserParserStaticData->serializedATN;
}


//----------------- Preprocessor_directiveContext ------------------------------------------------------------------

myPreprocessorParser::Preprocessor_directiveContext::Preprocessor_directiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t myPreprocessorParser::Preprocessor_directiveContext::getRuleIndex() const {
  return myPreprocessorParser::RulePreprocessor_directive;
}

void myPreprocessorParser::Preprocessor_directiveContext::copyFrom(Preprocessor_directiveContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
  this->value = ctx->value;
}

//----------------- PreprocessorDiagnosticContext ------------------------------------------------------------------

tree::TerminalNode* myPreprocessorParser::PreprocessorDiagnosticContext::ERROR() {
  return getToken(myPreprocessorParser::ERROR, 0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorDiagnosticContext::TEXT() {
  return getToken(myPreprocessorParser::TEXT, 0);
}

myPreprocessorParser::Directive_new_line_or_sharpContext* myPreprocessorParser::PreprocessorDiagnosticContext::directive_new_line_or_sharp() {
  return getRuleContext<myPreprocessorParser::Directive_new_line_or_sharpContext>(0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorDiagnosticContext::WARNING() {
  return getToken(myPreprocessorParser::WARNING, 0);
}

myPreprocessorParser::PreprocessorDiagnosticContext::PreprocessorDiagnosticContext(Preprocessor_directiveContext *ctx) { copyFrom(ctx); }

void myPreprocessorParser::PreprocessorDiagnosticContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreprocessorDiagnostic(this);
}
void myPreprocessorParser::PreprocessorDiagnosticContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreprocessorDiagnostic(this);
}
//----------------- PreprocessorNullableContext ------------------------------------------------------------------

tree::TerminalNode* myPreprocessorParser::PreprocessorNullableContext::NULLABLE() {
  return getToken(myPreprocessorParser::NULLABLE, 0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorNullableContext::TEXT() {
  return getToken(myPreprocessorParser::TEXT, 0);
}

myPreprocessorParser::Directive_new_line_or_sharpContext* myPreprocessorParser::PreprocessorNullableContext::directive_new_line_or_sharp() {
  return getRuleContext<myPreprocessorParser::Directive_new_line_or_sharpContext>(0);
}

myPreprocessorParser::PreprocessorNullableContext::PreprocessorNullableContext(Preprocessor_directiveContext *ctx) { copyFrom(ctx); }

void myPreprocessorParser::PreprocessorNullableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreprocessorNullable(this);
}
void myPreprocessorParser::PreprocessorNullableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreprocessorNullable(this);
}
//----------------- PreprocessorRegionContext ------------------------------------------------------------------

tree::TerminalNode* myPreprocessorParser::PreprocessorRegionContext::REGION() {
  return getToken(myPreprocessorParser::REGION, 0);
}

myPreprocessorParser::Directive_new_line_or_sharpContext* myPreprocessorParser::PreprocessorRegionContext::directive_new_line_or_sharp() {
  return getRuleContext<myPreprocessorParser::Directive_new_line_or_sharpContext>(0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorRegionContext::TEXT() {
  return getToken(myPreprocessorParser::TEXT, 0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorRegionContext::ENDREGION() {
  return getToken(myPreprocessorParser::ENDREGION, 0);
}

myPreprocessorParser::PreprocessorRegionContext::PreprocessorRegionContext(Preprocessor_directiveContext *ctx) { copyFrom(ctx); }

void myPreprocessorParser::PreprocessorRegionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreprocessorRegion(this);
}
void myPreprocessorParser::PreprocessorRegionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreprocessorRegion(this);
}
//----------------- PreprocessorDeclarationContext ------------------------------------------------------------------

tree::TerminalNode* myPreprocessorParser::PreprocessorDeclarationContext::DEFINE() {
  return getToken(myPreprocessorParser::DEFINE, 0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorDeclarationContext::CONDITIONAL_SYMBOL() {
  return getToken(myPreprocessorParser::CONDITIONAL_SYMBOL, 0);
}

myPreprocessorParser::Directive_new_line_or_sharpContext* myPreprocessorParser::PreprocessorDeclarationContext::directive_new_line_or_sharp() {
  return getRuleContext<myPreprocessorParser::Directive_new_line_or_sharpContext>(0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorDeclarationContext::UNDEF() {
  return getToken(myPreprocessorParser::UNDEF, 0);
}

myPreprocessorParser::PreprocessorDeclarationContext::PreprocessorDeclarationContext(Preprocessor_directiveContext *ctx) { copyFrom(ctx); }

void myPreprocessorParser::PreprocessorDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreprocessorDeclaration(this);
}
void myPreprocessorParser::PreprocessorDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreprocessorDeclaration(this);
}
//----------------- PreprocessorConditionalContext ------------------------------------------------------------------

tree::TerminalNode* myPreprocessorParser::PreprocessorConditionalContext::IF() {
  return getToken(myPreprocessorParser::IF, 0);
}

myPreprocessorParser::Directive_new_line_or_sharpContext* myPreprocessorParser::PreprocessorConditionalContext::directive_new_line_or_sharp() {
  return getRuleContext<myPreprocessorParser::Directive_new_line_or_sharpContext>(0);
}

myPreprocessorParser::Preprocessor_expressionContext* myPreprocessorParser::PreprocessorConditionalContext::preprocessor_expression() {
  return getRuleContext<myPreprocessorParser::Preprocessor_expressionContext>(0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorConditionalContext::ELIF() {
  return getToken(myPreprocessorParser::ELIF, 0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorConditionalContext::ELSE() {
  return getToken(myPreprocessorParser::ELSE, 0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorConditionalContext::ENDIF() {
  return getToken(myPreprocessorParser::ENDIF, 0);
}

myPreprocessorParser::PreprocessorConditionalContext::PreprocessorConditionalContext(Preprocessor_directiveContext *ctx) { copyFrom(ctx); }

void myPreprocessorParser::PreprocessorConditionalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreprocessorConditional(this);
}
void myPreprocessorParser::PreprocessorConditionalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreprocessorConditional(this);
}
//----------------- PreprocessorPragmaContext ------------------------------------------------------------------

tree::TerminalNode* myPreprocessorParser::PreprocessorPragmaContext::PRAGMA() {
  return getToken(myPreprocessorParser::PRAGMA, 0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorPragmaContext::TEXT() {
  return getToken(myPreprocessorParser::TEXT, 0);
}

myPreprocessorParser::Directive_new_line_or_sharpContext* myPreprocessorParser::PreprocessorPragmaContext::directive_new_line_or_sharp() {
  return getRuleContext<myPreprocessorParser::Directive_new_line_or_sharpContext>(0);
}

myPreprocessorParser::PreprocessorPragmaContext::PreprocessorPragmaContext(Preprocessor_directiveContext *ctx) { copyFrom(ctx); }

void myPreprocessorParser::PreprocessorPragmaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreprocessorPragma(this);
}
void myPreprocessorParser::PreprocessorPragmaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreprocessorPragma(this);
}
//----------------- PreprocessorLineContext ------------------------------------------------------------------

tree::TerminalNode* myPreprocessorParser::PreprocessorLineContext::LINE() {
  return getToken(myPreprocessorParser::LINE, 0);
}

myPreprocessorParser::Directive_new_line_or_sharpContext* myPreprocessorParser::PreprocessorLineContext::directive_new_line_or_sharp() {
  return getRuleContext<myPreprocessorParser::Directive_new_line_or_sharpContext>(0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorLineContext::DIGITS() {
  return getToken(myPreprocessorParser::DIGITS, 0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorLineContext::DEFAULT() {
  return getToken(myPreprocessorParser::DEFAULT, 0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorLineContext::DIRECTIVE_HIDDEN() {
  return getToken(myPreprocessorParser::DIRECTIVE_HIDDEN, 0);
}

tree::TerminalNode* myPreprocessorParser::PreprocessorLineContext::STRING() {
  return getToken(myPreprocessorParser::STRING, 0);
}

myPreprocessorParser::PreprocessorLineContext::PreprocessorLineContext(Preprocessor_directiveContext *ctx) { copyFrom(ctx); }

void myPreprocessorParser::PreprocessorLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreprocessorLine(this);
}
void myPreprocessorParser::PreprocessorLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreprocessorLine(this);
}
myPreprocessorParser::Preprocessor_directiveContext* myPreprocessorParser::preprocessor_directive() {
  Preprocessor_directiveContext *_localctx = _tracker.createInstance<Preprocessor_directiveContext>(_ctx, getState());
  enterRule(_localctx, 0, myPreprocessorParser::RulePreprocessor_directive);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case myPreprocessorParser::DEFINE: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorDeclarationContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(6);
        match(myPreprocessorParser::DEFINE);
        setState(7);
        match(myPreprocessorParser::CONDITIONAL_SYMBOL);
        setState(8);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectiveDefine(); 
        break;
      }

      case myPreprocessorParser::UNDEF: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorDeclarationContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(11);
        match(myPreprocessorParser::UNDEF);
        setState(12);
        match(myPreprocessorParser::CONDITIONAL_SYMBOL);
        setState(13);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectiveUndef(); 
        break;
      }

      case myPreprocessorParser::IF: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorConditionalContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(16);
        match(myPreprocessorParser::IF);
        setState(17);
        antlrcpp::downCast<PreprocessorConditionalContext *>(_localctx)->expr = preprocessor_expression(0);
        setState(18);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectiveIf(); 
        break;
      }

      case myPreprocessorParser::ELIF: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorConditionalContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(21);
        match(myPreprocessorParser::ELIF);
        setState(22);
        antlrcpp::downCast<PreprocessorConditionalContext *>(_localctx)->expr = preprocessor_expression(0);
        setState(23);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectiveElif(); 
        break;
      }

      case myPreprocessorParser::ELSE: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorConditionalContext>(_localctx);
        enterOuterAlt(_localctx, 5);
        setState(26);
        match(myPreprocessorParser::ELSE);
        setState(27);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectiveElse(); 
        break;
      }

      case myPreprocessorParser::ENDIF: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorConditionalContext>(_localctx);
        enterOuterAlt(_localctx, 6);
        setState(30);
        match(myPreprocessorParser::ENDIF);
        setState(31);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectiveEndif(); 
        break;
      }

      case myPreprocessorParser::LINE: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorLineContext>(_localctx);
        enterOuterAlt(_localctx, 7);
        setState(34);
        match(myPreprocessorParser::LINE);
        setState(41);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case myPreprocessorParser::DIGITS: {
            setState(35);
            match(myPreprocessorParser::DIGITS);
            setState(37);
            _errHandler->sync(this);

            _la = _input->LA(1);
            if (_la == myPreprocessorParser::STRING) {
              setState(36);
              match(myPreprocessorParser::STRING);
            }
            break;
          }

          case myPreprocessorParser::DEFAULT: {
            setState(39);
            match(myPreprocessorParser::DEFAULT);
            break;
          }

          case myPreprocessorParser::DIRECTIVE_HIDDEN: {
            setState(40);
            match(myPreprocessorParser::DIRECTIVE_HIDDEN);
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        setState(43);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectiveLine(); 
        break;
      }

      case myPreprocessorParser::ERROR: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorDiagnosticContext>(_localctx);
        enterOuterAlt(_localctx, 8);
        setState(46);
        match(myPreprocessorParser::ERROR);
        setState(47);
        match(myPreprocessorParser::TEXT);
        setState(48);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectiveError(); 
        break;
      }

      case myPreprocessorParser::WARNING: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorDiagnosticContext>(_localctx);
        enterOuterAlt(_localctx, 9);
        setState(51);
        match(myPreprocessorParser::WARNING);
        setState(52);
        match(myPreprocessorParser::TEXT);
        setState(53);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectiveWarning(); 
        break;
      }

      case myPreprocessorParser::REGION: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorRegionContext>(_localctx);
        enterOuterAlt(_localctx, 10);
        setState(56);
        match(myPreprocessorParser::REGION);
        setState(58);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == myPreprocessorParser::TEXT) {
          setState(57);
          match(myPreprocessorParser::TEXT);
        }
        setState(60);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectiveRegion(); 
        break;
      }

      case myPreprocessorParser::ENDREGION: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorRegionContext>(_localctx);
        enterOuterAlt(_localctx, 11);
        setState(63);
        match(myPreprocessorParser::ENDREGION);
        setState(65);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == myPreprocessorParser::TEXT) {
          setState(64);
          match(myPreprocessorParser::TEXT);
        }
        setState(67);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectiveEndregion(); 
        break;
      }

      case myPreprocessorParser::PRAGMA: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorPragmaContext>(_localctx);
        enterOuterAlt(_localctx, 12);
        setState(70);
        match(myPreprocessorParser::PRAGMA);
        setState(71);
        match(myPreprocessorParser::TEXT);
        setState(72);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectivePragma(); 
        break;
      }

      case myPreprocessorParser::NULLABLE: {
        _localctx = _tracker.createInstance<myPreprocessorParser::PreprocessorNullableContext>(_localctx);
        enterOuterAlt(_localctx, 13);
        setState(75);
        match(myPreprocessorParser::NULLABLE);
        setState(76);
        match(myPreprocessorParser::TEXT);
        setState(77);
        directive_new_line_or_sharp();
         this->OnPreprocessorDirectiveNullable(); 
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Directive_new_line_or_sharpContext ------------------------------------------------------------------

myPreprocessorParser::Directive_new_line_or_sharpContext::Directive_new_line_or_sharpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* myPreprocessorParser::Directive_new_line_or_sharpContext::DIRECTIVE_NEW_LINE() {
  return getToken(myPreprocessorParser::DIRECTIVE_NEW_LINE, 0);
}

tree::TerminalNode* myPreprocessorParser::Directive_new_line_or_sharpContext::EOF() {
  return getToken(myPreprocessorParser::EOF, 0);
}


size_t myPreprocessorParser::Directive_new_line_or_sharpContext::getRuleIndex() const {
  return myPreprocessorParser::RuleDirective_new_line_or_sharp;
}

void myPreprocessorParser::Directive_new_line_or_sharpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDirective_new_line_or_sharp(this);
}

void myPreprocessorParser::Directive_new_line_or_sharpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<myPreprocessorParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDirective_new_line_or_sharp(this);
}
